[gd_scene load_steps=6 format=3 uid="uid://b6hiurdrdeqj"]

[ext_resource type="Texture2D" uid="uid://bx2c2nqvs4pp3" path="res://Assets/Source/arts/ScoreBar.png" id="1_tragr"]
[ext_resource type="FontFile" uid="uid://70qbtv1b7jqy" path="res://Assets/Source/fonts/Teko-VariableFont_wght.ttf" id="1_yqiak"]
[ext_resource type="Script" path="res://Assets/Scripts/game_ui.gd" id="2_onxhg"]
[ext_resource type="Script" path="res://Assets/Scripts/score_objet.gd" id="4_cnttu"]

[sub_resource type="Theme" id="Theme_fi2sd"]
default_font = ExtResource("1_yqiak")
default_font_size = 30

[node name="Game_UI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = SubResource("Theme_fi2sd")
script = ExtResource("2_onxhg")

[node name="Panel" type="Panel" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 50.0

[node name="HBoxContainer2" type="HBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -343.0
offset_right = 343.0
offset_bottom = 47.0
grow_horizontal = 2

[node name="PlayerScorePanel" type="TextureRect" parent="Panel/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_tragr")
flip_h = true

[node name="PlayerScore" type="Label" parent="Panel/HBoxContainer2/PlayerScorePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_cnttu")

[node name="EnemyScorePanel" type="TextureRect" parent="Panel/HBoxContainer2"]
layout_mode = 2
texture = ExtResource("1_tragr")

[node name="EnemyScore" type="Label" parent="Panel/HBoxContainer2/EnemyScorePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.5
offset_top = -11.5
offset_right = 0.5
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("4_cnttu")

[node name="AlertLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -22.0
offset_right = 20.0
offset_bottom = 22.0
grow_horizontal = 2
grow_vertical = 2
